Funcional. Hacer mas amigable el html

--- a/reporte.html
+++ b/reporte.html
@@ -1,4 +1,28 @@
 <html>
         <head>Reporte</head>
-        <body><p></p></body> 
+        <body>
+            <p>Nota Minima</p>
+            <p>La nota minima es de Estudiante 03 y la nota es de  36 </p>
+            <p> </p>
+            <p>Nota Maxima</p>
+            <p>La nota maxima es de Estudiante 05 y la nota es de  99 </p>
+            <p> </p>
+            <p>Promedio</p>
+            <p>El promedio de notas es de 70.83333333333333</p>
+            <p> </p>
+            <p>Aprobados</p>
+            <p>El numero de estudiantes aprobados es de 5</p>
+            <p> </p>
+            <p>Reprobados</p>
+            <p>El numero de estudiantes reprobados es de 1</p>
+            <p> </p>
+            <p>Lista Descendente</p>
+            <p>eee</p>
+            <p> </p>
+            <p>Lista Ascendente</p>
+            <p>fff</p>
+
+
+        
+        </body> 
         </html>
